tests/Compilation/positive/test083.juvix
-- Record update
module test083;

import Stdlib.Prelude open;

type R :=
  mkR@{
    x : Nat;
    y : Nat;
  };

open R using {mkR} public;

f (r : R) : R :=
  let
    x := 7;
  in r@R{
    x := R.x r + x;
    y := x;
  };

main : Nat := case f (mkR 1 2) of mkR x y := x + 5;
